--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "nuxt": "^3.14.159",
     "vue": "latest",
     "vue-router": "latest"
